# MLIRTracer

./: .gitignore  README.md
TosaGenerator/: empty.mlir
TosaGenerator/include/TosaGen/: create.h  opinfo.h  transfer.h  utils.h
TosaGenerator/mlir-opt/: mlir-opt.cpp
TosaGenerator/src/: CMakeLists.txt  MIX.cpp  tosaGen.cpp
TosaGenerator/utils/: CMakeLists.txt  create.cpp  opinfo.cpp  tosaOps.json  transfer.cpp  utils.cpp
fuzz_tool/: run.sh
fuzz_tool/conf/: Ops_LoweringPass.json  conf.yml  init.sql  mlir_opt.txt  mlir_opt_lower.txt  ops_mutate.json
fuzz_tool/src/: main.py
fuzz_tool/src/fuzz/: fuzz.py  reporter.py
fuzz_tool/src/utils/: IR_analyzer.py  config.py  dbutils.py  logger_tool.py  tosaGen.py
